[tool.poetry]
name = "gcal_api"
version = "0.1.0"
description = ""
authors = ["Nathan Dias <nathan.dias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.2.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
